Added Citations for Swift Premium Oleomargarine

--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -28,7 +28,7 @@ of them are tried and practical</i></p>
 
 <p><strong>Light Part</strong></p>
 <ul>
-  <li>1/2 cupful Swift's Premium Oleomargarine</li>
+  <li>1/2 cupful <cite>Swift's Premium Oleomargarine</cite></li>
   <li>1/2 cupful sweet milk</li>
   <li>1-1/2 teaspoonfuls baking-powder</li>
   <li>1 cupful sugar</li>
@@ -44,7 +44,7 @@ of them are tried and practical</i></p>
 <p><strong>Dark Part</strong></p>
 
 <ul>
-  <li>1/2 cupful Swift's Premium Oleomargarine</li>
+  <li>1/2 cupful <cite>Swift's Premium Oleomargarine</cite></li>
   <li>3/4 cupful milk</li>
   <li>1-1/2 teaspoonfuls baking-powder</li>
   <li>Yolks of 4 eggs</li>
