--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -71,7 +71,7 @@
         
     <h3>Sugar Cookies</h3>
     <ul>
-        <li>1 cupful Swift's Premium Oleomargarine</li>
+        <li>1 cupful <cite>Swift's Premium Oleomargarine</cite></li>
         <li>1 cupful sour milk</li>
         <li>1 teaspoonful soda</li>
         <li>2 cupfuls sugar</li>
